@@ -63,6 +63,7 @@ parent class in order maintain consistency across languages.
 'tog-uselivepreview' => 'Use live preview (JavaScript) (Experimental)',
 'tog-autopatrol' => 'Mark edits I make as patrolled',
 'tog-forceeditsummary' => 'Prompt me when entering a blank edit summary',
+'tog-watchlisthideown' => 'Hide my edits from the watchlist',
 
 'underline-always' => 'Always',
 'underline-never' => 'Never',
@@ -695,6 +696,8 @@ $2 List redirects &nbsp; Search for $3 $9",
 'math_notexvc'	=> 'Missing texvc executable; please see math/README to configure.',
 'prefs-personal' => 'User profile',
 'prefs-rc' => 'Recent changes',
+'prefs-watchlist' => 'Watchlist',
+'prefs-watchlist-days' => 'Number of days to show in watchlist:',
 'prefs-misc' => 'Misc',
 'saveprefs'		=> 'Save',
 'resetprefs'	=> 'Reset',
