@@ -92,6 +92,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   the timestamp of the last update, in YYYYMMDDHHMMSS format.
 * (bug 5628) More translations for MessagesHr.php
 * (bug 5595) Localisation for Bosnian language (bs)
+* (bug 2910) Default view preferences for watchlists
 
 == Compatibility ==
 
